/***********************************************************************
 X3 ChangeLog

2006-10-12  Alex Schumann   <rubin@afternet.org>
	
	* src/opserv.c: Added VERSION alert/trace reaction, so you can now
	setup x3 to version only users matching a criteria, and then another
	alert to do someting based on the version reply. This should be
	usefull for finding bots etc. Or, for example, you can make all xchat
	people join #xchat, or all mirc join #mirc etc.
	Also, there is a fix in here for SVSJOIN which i hadn't gotten
	everything working with.

	* src/proto-p10.c: added privmsg_user and version_user functions

	* src/proto.h: added privmsg_user and version_user function
	declerations

	* src/hash.h: added version_reply variable to users



2006-10-12  Alex Schumann   <rubin@afternet.org>

	* src/opserv.c: Added SVSJOIN command, to push a user into a channel,
	and a TRACE REACTION of SVSJOIN for trace and alerts. Now you can do
	something like 'trace SVSJOIN chantarget #dronebots nick bot[*'
	or send all level3 users to a perticular channel on connection, etc.

2006-10-12  Alex Schumann   <rubin@afternet.org>

	* src/chanserv.c: Make lamers not affect users on the userlist above
	inviteme level in the channel. (why kb users who can .uba and
	.inviteme back in?)

2006-10-10  Neil Spierling  <sirvulcan@gmail.com>

	* src/spamserv.c: Ignore those with access (if the options are
	disabled- scanchanops, scanhalfops, scanvoiced.

2006-10-08  Alex Schumann   <rubin@afternet.org>

	* src/chanserv.c: undid 9/16/06 change of 5 second delay before
	autojoin. Not really a great solution. Instead, move auth_handler
	funcs to be called after stamping etc. thx to Buttaknife for this
	solution.

	* src/nickserv.c: move auth_func calls to after stamping, and
	commented up the cmd_auth source to make it more managable.

2006-10-04  Alex Schumann   <rubin@afternet.org>

	* src/chanserv.c: remove redundant 'none' from empty llists

2006-10-04  Neil Spierling  <sirvulcan@gmail.com>
